Sidebar: Fix scrolling on mobile

--- a/app/assets/stylesheets/components/Sidebar.scss
+++ b/app/assets/stylesheets/components/Sidebar.scss
@@ -61,5 +61,11 @@
 }
 
 // override bootstrap coreui width
-.sidebar { flex: 0 0 300px !important; margin-left: -300px !important; transition: none; width: auto !important; }
+.sidebar {
+  flex: 0 0 300px !important;
+  margin-left: -300px !important;
+  overflow-y: scroll;
+  transition: none;
+  width: auto !important;
+}
 .sidebar-show .sidebar { margin-left: 0 !important; }
